@startuml ER

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i><u>x</u></i>

table(users) {
  primary_key(id) UUID
  name VARCHAR
  image_url TEXT
  language VARCHAR
  role VARCHAR
  created_at DATETIME
  updated_at DATETIME
  deleted_at DATETIME
}

table(rooms) {
  primary_key(id) UUID
  foreign_key(create_user_id) UUID
  name VARCHAR
  created_at DATETIME
  updated_at DATETIME
  deleted_at DATETIME
}

table(user_rooms) {
  primary_key(id) UUID
  foreign_key(user_id) UUID
  foreign_key(room_id) UUID
  created_at DATETIME
  deleted_at DATETIME
}

table(messages) {
  primary_key(id) UUID
  foreign_key(user_id) UUID
  foreign_key(room_id) UUID
  message TEXT
  language VARCHAR
  created_at DATETIME
  updated_at DATETIME
  deleted_at DATETIME
}

table(translations) {
  primary_key(id) UUID
  foreign_key(message_id) UUID
  message TEXT
  language VARCHAR
  created_at DATETIME
  updated_at DATETIME
}

users ||-r-o{ user_rooms
rooms ||-l-o{ user_rooms
rooms ||--o{ messages
users ||--o{ messages
messages ||--o{ translations

@enduml
